--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -34,3 +34,70 @@ p {
 a {
   text-decoration: none;
 }
+
+.float-animation {
+  -webkit-animation: float 2.5s;
+  animation: float 2.5s;
+  animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #0f0f0e;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: linear-gradient(to top, #d9ed92 0%, #b5e48c 100%);
+  background: -webkit-linear-gradient(to top, #d9ed92 0%, #b5e48c 100%);
+  background: -moz-linear-gradient(to top, #d9ed92 0%, #b5e48c 100%);
+}
+
+::selection {
+  background: #5ee6ae;
+  color: #fff;
+}
+
+.gradient-text {
+  background: linear-gradient(to right, #6aed80, #3878d8 100%);
+  background: -webkit-linear-gradient(to right, #6aed80 0%, #3878d8 100%);
+  background: -moz-linear-gradient(to right, #6aed80 0%, #3878d8 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  &::selection {
+    color: #fff;
+    background: #53e0db;
+    -webkit-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-text-fill-color: #fff;
+  }
+}
